Added command line parser to enhance the user experience

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-# Ignore some folders containing data, output and logs
-data
+# Ignore some folders containing some results
 out
-log
-old
 
 # Ignore executable
 denoise_map
